# winsparkle

./: CMakeLists.txt
src/: CMakeLists.txt
